--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
     <body id="Color4">
             <a href="Future\main.html" class="Down"><center><button class="Block">
             <h1 id ="h1F">Future</h1>
-            <img src="Future logo 1.png" alt="future" height="100" width="150"/>
+            <img src="img\Future logo 1.png" alt="future img" height="100" width="150"/>
+
+        </button></center></a>
+        <br />
+        <body id="Color4">
+            <a href="Random\randomMain.html" class="Down"><center><button class="Block">
+            <h1 id ="h1F">Random</h1>
+            <img src="img\RandomLogo.png" alt="random img" height="100" width="70"/>
 
         </button></center></a>
     </body>
