--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8"/>
         <title>Проекты</title>
         <link rel="stylesheet" href="yura.css">
+            
     </head>
     <body background="img/bg.jpg">
         <!--
@@ -21,27 +22,30 @@
         </button></center></a>
          <button onclick="location.href = '/example/'">Кнопка-ссылка</button>
         <a href="#" class="c">Комментировать</a>-->
-
-        <div id="Menu">
-            <button id="MenuBut" onclick="MenuBut()">
-                <img src="img\test.png" />
-            </button>
+        
+        <div id="menuZone">
         </div>
-
+        <div id="buttonMenu" onclick="clickMenu()">
+            <img src="img/test.png" alt="buttonMenu">
+        </div>
+        <!--<div id="foneMenu2">
+            <div id="menuZone2"></div>
+        </div>-->
         <div id="Menu2">
-                <button class="button2" onclick="location.href = 'https://yura440.github.io/Future/main.html'">Future</button>
-                <button class="button2" onclick="location.href = 'https://yura440.github.io/Random/randomMain.html'">Random</button>
+            <div class="buttonMenu2"  onclick="location.href = 'https://yura440.github.io/Future/main.html'">Future</div>
+            <div class="buttonMenu2"  onclick="location.href = 'https://yura440.github.io/Random/randomMain.html'">Random</div>
+            <div class="buttonMenu2">Game</div>
         </div>
 
         <script>
-            var i = true;
-            function MenuBut(){
-                if (i)
-                    document.getElementById("Menu2").id = "Menu3";
+            var a = false;
+            function clickMenu() {
+                if (a)
+                    document.getElementById("Menu2").style.left = -300 + "px";
                     else
-                    document.getElementById("Menu3").id = "Menu2";
-                i = !i;
-            }
+                    document.getElementById("Menu2").style.left = 0;
+                    a = !a;
+                }
         </script>
     </body>
 </html>
