--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 {
                     case 1: location.href = 'https://goo.gl/3Ri2Tg'; break;
                     case 2: location.href = 'https://goo.gl/saHJZg'; break;
-                    case 3: location.href = 'https://goo.gl/saHJZg'; break;
+                    case 3: location.href = 'https://goo.gl/uNYmaq'; break;
                 }
             }
         </script>
