--- a/Shen/Shen.html
+++ b/Shen/Shen.html
@@ -14,5 +14,11 @@
             <div class="div div3"><img id="img3" src="./img/null.png" /></div>
             <div class="div div4"><img id="img4" src="./img/null.png"/></div>
             <div class="div div5"><img id="img5" src="./img/null.png"/></div>
+
+            <div class="div div6"><img id="img6" src="./img/null.png" /></div>
+            <div class="div div7"><img id="img7" src="./img/null.png" /></div>
+            <div class="div div8"><img id="img8" src="./img/null.png" /></div>
+            <div class="div div9"><img id="img9" src="./img/null.png"/></div>
+            <div class="div div10"><img id="img10" src="./img/null.png"/></div>
         </body>
     </html>
